feat: implement modernized update dialogs and notifications